--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,56 @@
     box-sizing: border-box;
 }
 
-img {
-    max-width: 100%;
-}
 
 body {
     font-family: 'Fredoka', sans-serif;
+    
+}
+
+.container {
+    width:70%;
+    margin: auto;
+    text-align: center;
+}
+
+/* MAIN */
+
+/* TITLE */
+h1 {
+    padding-bottom: 30px;
+}
+
+/* PARAGRAPH */
+p {
+    padding-bottom: 30px;
+}
+
+/* PROFILE-DIV */
+
+.row{
+    padding: 20px;
+}
+.profile{
+    border: 2px solid white;
+    width: calc(100% / 3);
+    float: left;
+    padding:20px;
+}
+
+
+img {
+width:100px;
+float:left;
+
+}
+
+.card {
     background-color: #0f0e17;
     color: white;
+}
+
+.clearfix::after {
+    content: "";
+    display: table;
+    clear:both;
 }
