--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-    width:70%;
+    width:90%;
     margin: auto;
     text-align: center;
 }
@@ -21,7 +21,9 @@ body {
 
 /* TITLE */
 h1 {
-    padding-bottom: 30px;
+    
+    padding: 50px 0 30px 0;
+    color: #e53170;
 }
 
 /* PARAGRAPH */
@@ -31,10 +33,9 @@ p {
 
 /* PROFILE-DIV */
 
-.row{
-    padding: 20px;
-}
-.profile{
+
+
+.profile {
     border: 2px solid white;
     width: calc(100% / 3);
     float: left;
@@ -43,14 +44,15 @@ p {
 
 
 img {
-width:100px;
+width:110px;
 float:left;
-
 }
 
 .card {
     background-color: #0f0e17;
     color: white;
+    text-align: left;
+    line-height: 25px;
 }
 
 .clearfix::after {
@@ -58,3 +60,8 @@ float:left;
     display: table;
     clear:both;
 }
+
+.email {
+    color: rgb(78, 183, 218);
+}
+
