--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .container {
-    width:90%;
+    width:80%;
     margin: auto;
     text-align: center;
 }
@@ -22,13 +22,15 @@ body {
 /* TITLE */
 h1 {
     
-    padding: 50px 0 30px 0;
+    padding: 30px 0;
     color: #e53170;
+    font-size: 3rem;
 }
 
 /* PARAGRAPH */
 p {
     padding-bottom: 30px;
+    font-size: 1.2rem;
 }
 
 /* PROFILE-DIV */
@@ -44,8 +46,9 @@ p {
 
 
 img {
-width:110px;
+width:100px;
 float:left;
+margin-right: 20px;
 }
 
 .card {
@@ -53,12 +56,17 @@ float:left;
     color: white;
     text-align: left;
     line-height: 25px;
+    border-radius: 4px;
 }
 
 .clearfix::after {
     content: "";
     display: table;
     clear:both;
+}
+
+h3 {
+    padding-top:10px;
 }
 
 .email {
