--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-
+/* COMMON */
 body {
     font-family: 'Fredoka', sans-serif;
     
@@ -22,14 +22,14 @@ body {
 /* TITLE */
 h1 {
     
-    padding: 30px 0;
+    padding: 1.9rem 0;
     color: #e53170;
     font-size: 3rem;
 }
 
 /* PARAGRAPH */
 .main-paragraph {
-    padding-bottom: 30px;
+    padding-bottom: 1.9rem;
     font-size: 1.2rem;
 }
 
@@ -38,26 +38,26 @@ h1 {
 /* PROFILE-DIV */
 
 .profile {
-    border: 2px solid white;
+    border: 0.125rem solid white;
     width: calc(100% / 3);
     float: left;
-    padding:20px;
+    padding:1.25rem;
 }
 
 
 img {
-    width:100px;
+    width:6.25rem;
     float:left;
-    margin-right: 20px;
+    margin-right: 1.25rem;
 }
 
 .card {
     background-color: #0f0e17;
     color: white;
     text-align: left;
-    line-height: 25px;
-    border-radius: 4px;
-    box-shadow: 0 0 10px rgba(1, 1, 1, 0.5); 
+    line-height: 1.5rem;
+    border-radius: 0.25rem;
+    box-shadow: 0 0 0.63rem rgba(1, 1, 1, 0.5); 
 }
 
 
@@ -68,7 +68,7 @@ img {
 }
 
 h3 {
-    padding-top:10px;
+    padding-top:0.63rem;
 }
 
 .email {
